--- a/index.html
+++ b/index.html
@@ -1,7 +1,70 @@
 ﻿<!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        section {
+            display: -webkit-flex;
+            display: flex;
+        }
+
+        nav {
+            -webkit-flex: 1;
+            -ms-flex: 1;
+            flex: 1;
+            flex-direction: column;
+            background-color: darkgreen;
+            padding: 20px;
+        }
+            nav ul {
+                list-style-type: none;
+                padding: 0;
+            }
+                nav ul li a {
+                    display: flex;
+                    color: white;
+                    text-align: center;
+                    text-decoration: none;
+                }
+                    nav ul li a:hover {
+                    background-color: seagreen;
+                    }
+
+        article {
+            -webkit-flex: 3;
+            -ms-flex: 3;
+            flex: 3;
+        }
+
+
+
+
+    </style>
+</head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Jacob Stephens</h1>
     <p>I'm hosted with GitHub Pages.</p>
+
+    <section>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="#">Project Categories</a></li>
+            </ul>
+        </nav>
+
+        <article>
+            potato
+        </article>
+    </section>
 </body>
 </html>
