--- a/category.html
+++ b/category.html
@@ -120,7 +120,7 @@
             <div>
 
                 <a target="_blank" href="project.html">
-                    <img src="\assets\Rose logo-02.png" />
+                    <img src="assets\Rose logo-02.png" />
                 </a>
             </div>
             <div class="project_name"><h2>Project 1</h2></div>
@@ -130,7 +130,7 @@
         <div class="container">
             <div>
                 <a target="_blank" href="project.html">
-                    <img src="\assets\Rose logo-02.png" />
+                    <img src="assets\Rose logo-02.png" />
                 </a>
             </div>
             <div class="project_name"><h2>Project 2</h2></div>
@@ -139,7 +139,7 @@
         <div class="container">
             <div>
                 <a target="_blank" href="project.html">
-                    <img src="\assets\Rose logo-02.png" />
+                    <img src="assets\Rose logo-02.png" />
                 </a>
             </div>
             <div class="project_name"><h2>Project 3</h2></div>
