--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
         <header>
             <h1>Top 3 Projects</h1>
         </header>
+        
+        <!--Youtube Vid-->
+        <div>
+            <iframe width="420" height="315"
+                    src="https://www.youtube.com/live/-D3z55_oYtY?si=cXzLJkm_0EE4j0Gl&t=1918">
+            </iframe>
+        </div>
 
         <div class="gallery">
             <div class="container">
