Youtube Fix and About Page

--- a/index.html
+++ b/index.html
@@ -149,51 +149,54 @@
             <h2> Games by<br /> Jacob Stephens</h2>
         </header>
         <a class="active" href="index.html">Home</a>
-        <a href="categories.html">Categories</a>
+        <!--<a href="categories.html">Categories</a>-->
         <a href="about.html">About</a>
     </div>
 
     <div class="content">
         <header>
-            <h1>Top 3 Projects</h1>
+            <h1>Home - Capstone Presentation</h1>
         </header>
-        
+
         <!--Youtube Vid-->
         <div>
-            <iframe width="420" height="315"
-                    src="https://www.youtube.com/live/-D3z55_oYtY?si=cXzLJkm_0EE4j0Gl&t=1918">
-            </iframe>
+            <iframe width="1152" height="720" src="https://www.youtube.com/embed/-D3z55_oYtY?start=1918" title="NCTC DIRECT 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
+
+        <header>
+            <h1>Top Projects</h1>
+        </header>
         <div class="gallery">
             <div class="container">
                 <div class="imagelink">
 
-                    <a target="_blank" href="project.html">
+                    <a target="_blank" href="https://docs.google.com/document/d/1FJYKrVM54H9kBbO0A6sWWsUgFyYEXjAU9iNply3nMx0/edit?usp=sharing">
                         <img src="assets\Rose logo-02.png" />
                     </a>
                 </div>
-                <div class="project_name"><h2>Project 1</h2></div>
+                <div class="project_name"><h2>Lost Lineage Game Design Document</h2></div>
+                <div> Strategy RPG in development. Co-designed with Collin Patrick</div>
             </div>
 
 
-            <div class="container">
-                <div class="imagelink">
-                    <a target="_blank" href="project.html">
-                        <img src="assets\Rose logo-02.png" />
-                    </a>
-                </div>
-                <div class="project_name"><h2>Project 2</h2></div>
+            <!--<div class="container">
+            <div class="imagelink">
+                <a target="_blank" href="project.html">
+                    <img src="assets\Rose logo-02.png" />
+                </a>
             </div>
+            <div class="project_name"><h2>Project 2</h2></div>
+        </div>
 
-            <div class="container">
-                <div class="imagelink">
-                    <a target="_blank" href="project.html">
-                        <img src="assets\Rose logo-02.png" />
-                    </a>
-                </div>
-                <div class="project_name"><h2>Project 3</h2></div>
+        <div class="container">
+            <div class="imagelink">
+                <a target="_blank" href="project.html">
+                    <img src="assets\Rose logo-02.png" />
+                </a>
             </div>
+            <div class="project_name"><h2>Project 3</h2></div>
+        </div>-->
         </div>
 
     </div>
